<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_item_category"
            android:icon="@drawable/ic_category_black_24dp"
            android:title="@string/nav_category" />
        <item
            android:id="@+id/nav_item_recent"
            android:icon="@drawable/ic_recent_black_24dp"
            android:title="@string/nav_recent" />
        <item
            android:id="@+id/nav_item_login"
            android:icon="@drawable/ic_mail"
            android:title="@string/nav_login" />
    </group>
    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_rate"
            android:icon="@drawable/ic_rate_review_black_24dp"
            android:title="@string/nav_rate" />
        <item
            android:id="@+id/nav_item_share"
            android:icon="@drawable/ic_share_black_24dp"
            android:title="@string/nav_share"
            android:actionProviderClass="android.widget.ShareActionProvider"/>
        <item
            android:id="@+id/nav_item_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/nav_feedback" />
    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_item_aboutus"
            android:icon="@drawable/ic_about_us_black_24dp"
            android:title="@string/nav_aboutus" />
    </group>

</menu>